.provarCaches/00D5f000005vwGkEAI/objects/rstk__FSOINVLINE__c.object
<CustomObject>
    <description>FSOINVLINE__C Print Invoice Line, includes Details, Components and Comments</description>
    <fields>
        <fullName>rstk__altextid__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__comment__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <inlineHelpText>Single line of a comment or description</inlineHelpText>
        <label>Comment</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__component__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Component</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__custproddesc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Customer Product Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__custprodname__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Customer Product Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__discamt__c</fullName>
        <inlineHelpText>Discount Amount for the invoice line</inlineHelpText>
        <label>Discount Amt</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__discamt_cc__c</fullName>
        <inlineHelpText>Discount Amount for the invoice line - Customer Currency</inlineHelpText>
        <label>Discount Amt - Customer Currency</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__discamtcc__c</fullName>
        <formula>rstk__discamt__c * rstk__fsoinvh__r.rstk__currexchrate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__discpct__c</fullName>
        <inlineHelpText>Discount Percentage for the invoice line</inlineHelpText>
        <label>Discount Pct</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstk__freightamt__c</fullName>
        <defaultValue>0.0</defaultValue>
        <inlineHelpText>Freight Amount for the invoice line</inlineHelpText>
        <label>Freight Amount</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__freightamt_cc__c</fullName>
        <defaultValue>0.0</defaultValue>
        <inlineHelpText>Freight Amount for the invoice line - Customer Currency</inlineHelpText>
        <label>Freight Amount - Customer Currency</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__freightamtcc__c</fullName>
        <formula>rstk__freightamt__c * rstk__fsoinvh__r.rstk__currexchrate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fsoinvd_soinvline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sales Order Invoice Line</label>
        <referenceTo>rstk__soinvline__c</referenceTo>
        <relationshipLabel>Print Invoice Lines</relationshipLabel>
        <relationshipName>Print_Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__fsoinvh__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Print Invoice Header</label>
        <referenceTo>rstk__FSOINVH__c</referenceTo>
        <relationshipLabel>Print Invoice Lines</relationshipLabel>
        <relationshipName>lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__handlingamt__c</fullName>
        <defaultValue>0.0</defaultValue>
        <inlineHelpText>Handling Amount for the invoice line</inlineHelpText>
        <label>Handling Amount</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__handlingamt_cc__c</fullName>
        <defaultValue>0.0</defaultValue>
        <inlineHelpText>Handling Amount for the invoice line - Customer Currency</inlineHelpText>
        <label>Handling Amount - Customer Currency</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__handlingamtcc__c</fullName>
        <formula>rstk__handlingamt__c * rstk__fsoinvh__r.rstk__currexchrate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__invline__c</fullName>
        <inlineHelpText>Invoice Line number</inlineHelpText>
        <label>Invoice Line</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__linetype__c</fullName>
        <inlineHelpText>Defines how this line is to be rendered</inlineHelpText>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Empty</fullName>
                </value>
                <value>
                    <fullName>Detail</fullName>
                </value>
                <value>
                    <fullName>Description</fullName>
                </value>
                <value>
                    <fullName>Component</fullName>
                </value>
                <value>
                    <fullName>Comment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__order__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__packageamt__c</fullName>
        <defaultValue>0.0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Packaging Amount</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__packageamt_cc__c</fullName>
        <defaultValue>0.0</defaultValue>
        <inlineHelpText>Packaging Amount - Customer Currency</inlineHelpText>
        <label>Packaging Amount - Customer Currency</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__packageamtcc__c</fullName>
        <formula>rstk__packageamt__c * rstk__fsoinvh__r.rstk__currexchrate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__price__c</fullName>
        <defaultValue>0.0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__price_cc__c</fullName>
        <defaultValue>0.0</defaultValue>
        <inlineHelpText>Price - Customer Currency</inlineHelpText>
        <label>Price - Customer Currency</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pricecc__c</fullName>
        <formula>rstk__price__c * rstk__fsoinvh__r.rstk__currexchrate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__printcomment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Print Ext Comment on Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__prod__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Product</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__project__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Project</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__qty__c</fullName>
        <defaultValue>0.0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__qtyper__c</fullName>
        <defaultValue>0.0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Quantity Per</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__qtyship__c</fullName>
        <defaultValue>0.0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Quantity Shipped</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__seq__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Sequence Number</inlineHelpText>
        <label>Sequence</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__shipper__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Shipper Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__taxamount__c</fullName>
        <defaultValue>0.0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Override Tax Amount</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__taxamount_cc__c</fullName>
        <defaultValue>0.0</defaultValue>
        <inlineHelpText>Override Tax Amount - Customer Currency</inlineHelpText>
        <label>Override Tax Amt - Customer Currency</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__taxamountcc__c</fullName>
        <formula>rstk__taxamount__c * rstk__fsoinvh__r.rstk__currexchrate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__taxexempt__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Tax Exempt (Resale)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__taxoverride__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Override Tax Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__unitprice__c</fullName>
        <defaultValue>0.0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__unitprice_cc__c</fullName>
        <defaultValue>0.0</defaultValue>
        <inlineHelpText>Unit Price - Customer Currency</inlineHelpText>
        <label>Unit Price - Customer Currency</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__unitpricecc__c</fullName>
        <formula>rstk__unitprice__c * rstk__fsoinvh__r.rstk__currexchrate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__uom__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sales UOM</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Print Invoice Line</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Print Invoice Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>